removing video area

--- a/templates/artist_spa.html
+++ b/templates/artist_spa.html
@@ -49,7 +49,7 @@
         <section id="home" class="page active">
             <div class="gallery">
                 <h1 style="color: rgb(255, 255, 255);">Visuals</h1>
-                <div class="artwork">
+                <!--<div class="artwork">
                     <div class="video-gallery" id="video-container">
                         {% if videos %}
                             {% for video in videos %}
@@ -65,7 +65,7 @@
                             {% endfor %}
                         {% endif %}
                     </div>
-            </div>
+            </div>-->
             <div class="gallery">
                 <h1 style="color: rgb(255, 255, 255);">Music</h1>
                 <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2076641572&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/aerosoul" title="Aero Soul" target="_blank" style="color: #cccccc; text-decoration: none;">Aero Soul</a> · <a href="https://soundcloud.com/aerosoul/push-flip" title="Skrillex, Hamdi, TAICHU &amp; OFFAIAH - Push (Aero Soul Flip)" target="_blank" style="color: #cccccc; text-decoration: none;">Skrillex, Hamdi, TAICHU &amp; OFFAIAH - Push (Aero Soul Flip)</a></div>
