--- a/templates/artist_spa.html
+++ b/templates/artist_spa.html
@@ -32,7 +32,7 @@
             <div class="response" id="mce-success-response" style="display: none;"></div>
         </div>
     <div aria-hidden="true" style="position: absolute; left: -5000px;">
-        /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */
+        <!--/* real people should not fill this in and expect good things - do not remove this or risk form bot signups */-->
         <input type="text" name="b_3d5afd3607c98065555827374_6038cffaf1" tabindex="-1" value="">
     </div>
         <div class="optionalParent">
