--- a/static/style.css
+++ b/static/style.css
@@ -32,9 +32,11 @@ video {
 }
 .video-gallery {
     display: flex;
+    justify-content: center;
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     grid-gap: 30px;
     margin-top: 30px;
+    flex-wrap: wrap;
 }
 
 .video-item {
@@ -43,7 +45,7 @@ video {
     align-self: center;
     
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
+    background-color: #000000;
 }
 
 .video-item video {
@@ -54,11 +56,13 @@ video {
 
 .video-info {
     padding: 15px;
+    background-color: rgb(0, 0, 0);
 }
 
 .video-info h3 {
     margin-bottom: 8px;
     font-size: 18px;
+    color: white;
 }
 
 .video-info p {
@@ -181,10 +185,6 @@ main {
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s;
     background-color: #000000;
-}
-
-.artwork:hover {
-    transform: translateY(-10px);
 }
 
 .artwork img {
