--- a/templates/artist_spa.html
+++ b/templates/artist_spa.html
@@ -73,6 +73,12 @@
                 <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2036933716&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/aerosoul" title="Aero Soul" target="_blank" style="color: #cccccc; text-decoration: none;">Aero Soul</a> · <a href="https://soundcloud.com/aerosoul/ruins" title="RUINS" target="_blank" style="color: #cccccc; text-decoration: none;">RUINS</a></div>
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/0hHIcVaek62L2nIDIXC3dx?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
+            <div style="position: relative; width: 100%; height: 0; padding-bottom: 56.25%;">
+    <iframe src="https://bio.site/aero_soul" 
+            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+            frameborder="0">
+    </iframe>
+</div>
         </section>
 
         <!-- About Page -->
